--- a/flask-app/application/templates/index.html
+++ b/flask-app/application/templates/index.html
@@ -1,6 +1,6 @@
 {% block body_content %}
 
-<h1> This is a to do list! </h1>
+<h1> This is a to do list! updated! </h1>
 
 {% for list_ in lists %}
 <p> {{ list_.lid }}</p>
